--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.24.0
-  firebase_auth: ^3.11.1
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
+  firebase_core: ^1.24.0
+  firebase_auth: ^3.11.1
   email_validator: ^2.1.17
 
 dev_dependencies:
@@ -65,8 +65,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/signIn.png
+    - assets/signup.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
