--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^1.24.0
   firebase_auth: ^3.11.1
   email_validator: ^2.1.17
+  cloud_firestore: ^3.5.1
 
 dev_dependencies:
   flutter_test:
