--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,14 @@ dependencies:
   cloud_firestore: ^3.5.1
   json_annotation: ^4.7.0
   shimmer: ^2.0.0
+  firebase_storage: ^10.3.11
+  swipe_to: ^1.0.2
+  intl: ^0.17.0
+  image_picker: ^0.8.6
+  permission_handler: ^10.1.0
+  cached_network_image: ^3.2.2
+  video_thumbnail: ^0.5.3
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
