--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   cached_network_image: ^3.2.2
   video_thumbnail: ^0.5.3
   path_provider: ^2.0.11
+  video_player: ^2.4.7
 
 dev_dependencies:
   flutter_test:
