--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   sms_otp_auto_verify: ^2.1.0
   firebase_phone_auth_handler: ^1.0.6
   shared_preferences: ^2.0.15
+  speech_to_text: ^6.1.0
+  avatar_glow: ^2.0.2
+
 
 dev_dependencies:
   flutter_test:
