implemented the delete message Functionality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   shared_preferences: ^2.0.15
   speech_to_text: ^6.1.0
   avatar_glow: ^2.0.2
+  focused_menu: ^1.0.5
 
 
 dev_dependencies:
