create the story screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   speech_to_text: ^6.1.0
   avatar_glow: ^2.0.2
   focused_menu: ^1.0.5
+  story_view: ^0.14.0
 
 
 dev_dependencies:
