--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   focused_menu: ^1.0.5
   story_view: ^0.14.0
   grouped_list: ^5.1.2
+  flutter_reaction_button: ^2.0.1+2
+  deep_menu: ^1.0.1
 
 
 dev_dependencies:
